--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -13,14 +13,14 @@ body {
 }
 
 .bg {
-  background: url('https://images.unsplash.com/photo-1627512169108-60c8f4965ee6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fG9sZCUyMG1hbiUyMG9uJTIwY2hlc3N8ZW58MHx8MHx8fDA%3D') no-repeat center center/cover;
+  background: url("https://images.unsplash.com/photo-1627512169108-60c8f4965ee6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fG9sZCUyMG1hbiUyMG9uJTIwY2hlc3N8ZW58MHx8MHx8fDA%3D") no-repeat center center/cover;
   position: absolute;
   top: -30px;
   left: -30px;
   height: calc(100vh + 60px);
   width: calc(100vw + 60px);
   z-index: -1;
-  filter: blur(0px)
+  filter: blur(0);
 }
 
 .loading-text {
